<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="347dp"
        android:layout_height="605dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#275087"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/apellidosNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/apellidos_nombres"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtApellidosNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="18"
            android:focusableInTouchMode="true"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/apellidosNombres"
            app:layout_constraintTop_toBottomOf="@+id/apellidosNombres" />

        <TextView
            android:id="@+id/correoElectronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/correo_electronico"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApellidosNombres" />

        <TextView
            android:id="@+id/clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/correo_clave"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="18"
            android:inputType="textEmailAddress"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/correoElectronico"
            app:layout_constraintTop_toBottomOf="@+id/correoElectronico" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/clave"
            app:layout_constraintTop_toBottomOf="@+id/clave" />

        <TextView
            android:id="@+id/fechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fecha_nacimiento"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <EditText
            android:id="@+id/txtFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/fechaNacimiento"
            app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/carrera"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/ing_sistemas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ing_sistemas"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/ing_ambiental"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ing_ambiental"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/ing_mecanica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ing_mecanica"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <RadioButton
                android:id="@+id/administracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administracion"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/pregunta"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/radio"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <CheckBox
            android:id="@+id/amigos"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/amigos"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio" />

        <CheckBox
            android:id="@+id/internet"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/internet"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amigos" />

        <CheckBox
            android:id="@+id/publicidad"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/publicidad"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/internet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="347dp"
        android:layout_height="89dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="33dp"
        android:background="#E3B142"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleAdmision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_admision"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>